minor layout bugs fixed

--- a/scss/application.scss
+++ b/scss/application.scss
@@ -110,7 +110,7 @@ h5 {
 
 }
 
-#header-text {
+.header-text {
   position: relative;
   margin-left: 10%;
   margin-right: 10%;
